# globo_recommendation_fiap

./: .coveragerc  .env_example  .gitignore  README.md  bentofile.yaml  content_recommender.pkl  mkdocs.yml  pyproject.toml  service.py
.github/workflows/: ci_pipeline.yaml
docs/: API.md  checklist.md  data-describe.md  deploy.md  extra.css  index.md  model-features.md  model-parameters.md  model-saving.md  model-training.md  model.md  project-requirements.md  project.md  sysarchitecture.md
globo_recommendation_fiap/app/: app.py
globo_recommendation_fiap/data/: data_pipeline.py  download_data.py  extract_data.py  upload_data.py
globo_recommendation_fiap/data/challenge_files/: convert_kaggle.py  dataset_description.txt  ft_train_collaborative_filter.py  ft_train_content_recommender.py  itens_feature_store.ipynb  notebook.ipynb  notebook_julio.ipynb  topk.py  users_activity_features.ipynb
globo_recommendation_fiap/data/database/: .env-example  docker-compose.yaml  load_data.py
globo_recommendation_fiap/ml_model_training/: als_colaborative_filter.py  content_based_ml_flow.py  content_based_recommender.py  matrix_generator.py  register_model.py  surprise_colaborative_filtering.py
globo_recommendation_fiap/utils/: data_utils.py  db_connect.py  lake_connector.py  preprocessing_utils.py  settings.py
mlruns/563568730965172895/: meta.yaml
mlruns/563568730965172895/01087816b4164ad38aa1f300a7b94eab/: meta.yaml
mlruns/563568730965172895/02ee36068bab40afa3b2cdd971747a81/: meta.yaml
mlruns/563568730965172895/045c5adaddbe46b39996520111300b18/: meta.yaml
mlruns/563568730965172895/046332be26144a15a53c8a97d610da72/: meta.yaml
mlruns/563568730965172895/04fbb4b808384e9296e08ac5afa83698/: meta.yaml
mlruns/563568730965172895/055be97787f7428a98fc391252bfcdb3/: meta.yaml
mlruns/563568730965172895/05e6c4c5cfe84e88a131d4560bd9f596/: meta.yaml
mlruns/563568730965172895/0e44650e8a674c03b30d4a611f0d2c31/: meta.yaml
mlruns/563568730965172895/10835e15ae48447db2adad99d6787af7/: meta.yaml
mlruns/563568730965172895/1322d861526348868c00e45ee4c52567/: meta.yaml
mlruns/563568730965172895/14f0294a940b45ccba6704df2f4163c0/: meta.yaml
mlruns/563568730965172895/1619ba8b43b141d3a7e640d5b141413f/: meta.yaml
mlruns/563568730965172895/180653ee8b254dbab1446b9e42fdf633/: meta.yaml
mlruns/563568730965172895/1e49f3171bb84217b776d159c9ebc69a/: meta.yaml
mlruns/563568730965172895/1e4cb54c11e547bc91f650dd5c3bb07f/: meta.yaml
mlruns/563568730965172895/1fdb136825f0447da56db71c1d398406/: meta.yaml
mlruns/563568730965172895/2755cfcb8658435a83d1466b569ee4e7/: meta.yaml
mlruns/563568730965172895/29d84f9f1e9a481c9c692e9fc12912de/: meta.yaml
mlruns/563568730965172895/2e83f171b2014042a3916c2c9956e226/: meta.yaml
mlruns/563568730965172895/2f007acb2994402a9d988cc9b33f1209/: meta.yaml
mlruns/563568730965172895/32b64758059147388b66130d46795f02/: meta.yaml
mlruns/563568730965172895/32e51b19c90246c88b1eaa217ff7e286/: meta.yaml
mlruns/563568730965172895/389b16f0e2944fe5bc138a31b0b3ce93/: meta.yaml
mlruns/563568730965172895/38d0de8b8ee145b3b9e4cc64af276a0f/: meta.yaml
mlruns/563568730965172895/44d119cd904d49c18d2d92231c4fd8e3/: meta.yaml
mlruns/563568730965172895/44f6a5d418ad459ba4305c9ff3f52641/: meta.yaml
mlruns/563568730965172895/48878c9ca8e54adc8fc322686d215266/: meta.yaml
mlruns/563568730965172895/4a4787dd185d4c28b69904c5ecc76370/: meta.yaml
mlruns/563568730965172895/4de28893b1c8407682823fa3ae286f09/: meta.yaml
mlruns/563568730965172895/4e61c87c20ec4860b5f28db15a272c12/: meta.yaml
mlruns/563568730965172895/4f0edc7218284c1aaf5e1f4a35cf346a/: meta.yaml
mlruns/563568730965172895/506c9ba732ca4219b5400547ea8a64be/: meta.yaml
mlruns/563568730965172895/5460b917402a4928999db2532d4fa8db/: meta.yaml
mlruns/563568730965172895/6321fadedeb946ca857d8ad47e5ed985/: meta.yaml
mlruns/563568730965172895/66d15d4cd25847989ed8c76cd46a9b11/: meta.yaml
mlruns/563568730965172895/6b37eab9e45e48528b15fa0065f1dd45/: meta.yaml
mlruns/563568730965172895/6c4fb2383c2e43b38280781cbc58710e/: meta.yaml
mlruns/563568730965172895/6e200f2d079e4cdb9e842bc889e81965/: meta.yaml
mlruns/563568730965172895/6ec2cd06cf5f4f7aab69e86c1d3559cb/: meta.yaml
mlruns/563568730965172895/6ee13a2da39b4d7b8907e82ae20068a5/: meta.yaml
mlruns/563568730965172895/74f924b6f27b464ab6e6bc3022b220c1/: meta.yaml
mlruns/563568730965172895/757ab80d66aa47f78b034bc84c34448d/: meta.yaml
mlruns/563568730965172895/782f8a9ff75d4f1a82d258e8dfd60143/: meta.yaml
mlruns/563568730965172895/790835fa44974efd9fe560716e0425f7/: meta.yaml
requirements/: requirements.txt
tests/: conftest.py  test_app.py  test_aws.py  test_datapipeline.py  test_service.py
(+208 files in other folders)
