[tool.poetry]
name = "globo-recommendation-fiap"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
mkdocs-material = "^9.5.49"
mkdocstrings-python = "^1.12.2"
pymdown-extensions = "^10.12"
azure-storage-blob = "^12.24.0"
pyarrow = "^18.1.0"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
sentence-transformers = "^3.3.1"
implicit = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.4"
testcontainers = "^4.9.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['.venv', '*.ipynb']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .&& ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev globo_recommendation_fiap/app/app.py'
pre_test = 'task lint'
test = 'pytest -s --cov=globo_recommendation_fiap -vv'
post_test = 'coverage html'
docs = 'mkdocs serve'